--- a/style.css
+++ b/style.css
@@ -5,11 +5,18 @@ body {
     background: burlywood;
     background: url("images/desert2.jpeg");
     background-size: cover;
-}
-
-header {
     text-align: center;
     color: white;
+}
+
+a {
+    height: 70px;
+    width: 150px;
+    display: block;
+    margin: 50px auto;
+    text-decoration: none;
+    color: white;
+
 }
 
 h1 {
