added feature: active block is now highlighted

--- a/style.css
+++ b/style.css
@@ -16,7 +16,10 @@ a {
     margin: 50px auto;
     text-decoration: none;
     color: white;
+}
 
+#active {
+    background-color: lime;
 }
 
 h1 {
