--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ body {
     background-size: cover;
     text-align: center;
     color: white;
+    font-family: 'Caveat Brush', cursive;
+    animation: fadein 1.5s;
+}
+
+@keyframes fadein {
+    from {opacity: 0; color: rgb(49, 214, 255); }
+    to {opacity: 1; color: white; }
 }
 
 a {
@@ -23,7 +30,7 @@ a {
 }
 
 h1 {
-    font-family: 'Sacramento', cursive;
+    font-family: 'Caveat Brush', cursive;
     font-size: 250%;
 }
 
@@ -59,7 +66,7 @@ h1 {
 }
 
 .column:hover {
-    border: 1px dashed red;
+    border: 1px dashed lime;
 }
 
 .block1 {
