--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
     height: 100%;
     width: 800px;
     margin: 10px auto;
-    background: burlywood;
     background: url("images/desert2.jpeg");
     background-size: cover;
     text-align: center;
@@ -20,13 +19,28 @@ a {
     height: 70px;
     width: 150px;
     display: block;
-    margin: 50px auto;
+    margin: 150px auto;
     text-decoration: none;
     color: white;
 }
 
+a:hover {
+    background-color: lime;
+}
+
+button {
+    margin: auto 20px;
+    width: 100px;
+    color: white;
+    font-size: 14px;
+}
+
 #active {
     background-color: lime;
+}
+
+#invalid {
+    background-color: rgb(145, 0, 0)
 }
 
 h1 {
@@ -37,6 +51,7 @@ h1 {
 .counter {
     height: 50px;
     width: 100px;
+    margin-bottom: 15px;
 }
 
 .gamecontainer {
@@ -92,4 +107,8 @@ h1 {
 footer {
     color: blue;
     text-align: right;
+}
+
+.gametype {
+    display: inline-block
 }
